# WSDL

./: .gitignore  README.md  install.txt  main.py  pyproject.toml  xml_object.py
resources/: poliontology.properties  poliontology.ttl  shacl.ttl
src/: converter.py  linking.py  main.py  onto.py  retrieve_bio.py  retrieve_informacaobase.py  sparql.py  test.properties  test.ttl  xml_object.py
