[project]
name = "wsdl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "datetime>=6.0",
    "logging>=0.4.9.6",
    "owlready2>=0.49",
    "pyshacl>=0.30.1",
    "rdflib>=7.5.0",
    "requests>=2.32.5",
    "roman>=5.2",
]
